--- a/modules/01_general_guidelines/references.bib
+++ b/modules/01_general_guidelines/references.bib
@@ -70,3 +70,16 @@
   langid = {english},
   file = {/home/leveduras/Zotero/storage/MFW4K3YA/TLCL-24.11.pdf}
 }
+
+@book{straubProGit2025,
+  title = {Pro {{Git}}},
+  author = {Straub, Ben and Chacon, Scott},
+  year = {2025},
+  month = apr,
+  edition = {2},
+  volume = {1},
+  publisher = {Online},
+  urldate = {2025-07-01},
+  langid = {english},
+  file = {/home/leveduras/Zotero/storage/SM5UKMH5/progit.pdf}
+}
