--- a/modules/02_data_pre_processing/main.tex
+++ b/modules/02_data_pre_processing/main.tex
@@ -67,6 +67,8 @@ The current module is divided in two big sections:
 \subsection{Why it's important?}
 \subsection{Base assumptions}
 \section{Practical approach}
+To better understand the steps that, combined, allows us to comprehend and
+optimize our data, we're gonna apply the general pipeline
 \subsection{Data analysis}
 \subsubsection{Gathering the data}
 \subsubsection{Understanding our data}
